fix(ui): fix jpa to show correct info.